--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^4.9.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.1.13",
     "react-scripts": "1.1.0"
   },
   "scripts": {
